# r-type

./: .gitignore  B-CPP-500_rtype.txt  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Features.md  README.md  vcpkg-configuration.json  vcpkg.json
.claude/: settings.local.json
.github/workflows/: ci.yml
client/: README.md
client/app/: app_runner.cpp  app_runner.hpp  main.cpp  network_client.cpp  network_client.hpp  sfml_renderer.hpp
client/app/context/: client_context.hpp  client_context_events.cpp  client_context_init.cpp  client_context_render.cpp
client/app/ui/: ui_helpers.cpp  ui_helpers.hpp
client/systems/: accessibility_settings.hpp
client/systems/include/: accessibility_ui_system.hpp  animation_system.hpp  audio_manager.hpp  background_system.hpp  client_prediction_system.hpp  death_menu_ui_system.hpp  game_over_ui_system.hpp  game_settings.hpp  heart_display_system.hpp  help_ui_system.hpp  hud_system.hpp  input_system.hpp  interpolation_system.hpp  lobby_ui_system.hpp  localization.hpp  main_menu_ui_system.hpp  particle_system.hpp  render_system.hpp  scores_ui_system.hpp  settings_input_system.hpp  settings_ui_constants.hpp  settings_ui_system.hpp  snapshot_apply_system.hpp  snapshot_receive_system.hpp  starfield_system.hpp  ui_render_system.hpp  ui_system.hpp  ultimate_display_system.hpp
client/systems/include/components/: ui_tab_owner.hpp  ui_visibility.hpp
client/systems/src/: accessibility_settings.cpp  accessibility_ui_system.cpp  animation_system.cpp  audio_manager.cpp  background_system.cpp  client_prediction_system.cpp  death_menu_ui_system.cpp  game_over_ui_system.cpp  game_settings.cpp  heart_display_system.cpp  help_ui_system.cpp  hud_system.cpp  input_system.cpp  interpolation_system.cpp  language_system.cpp  lobby_ui_system.cpp  main_menu_ui_system.cpp  particle_system.cpp  render_system.cpp  scores_ui_system.cpp  settings_input_system.cpp  settings_ui_system.cpp  snapshot_apply_system.cpp  snapshot_receive_system.cpp  starfield_system.cpp  ui_render_system.cpp  ui_system.cpp  ultimate_display_system.cpp
client/tests/: test_render_resources.cpp
cmake/: CompilerWarnings.cmake  README.md
config/: README.md  accessibility.cfg  game_settings.cfg  leaderboard.cfg
docs/: ARCHITECTURE.md  INDEX.md  README.md  STRUCTURE.md  comparative_study.md  gameplay_todo.md  milestone_mvp.md  protocol.md  roadmap.md
engine/: CMakeLists.txt
engine/audio/: README.md
engine/audio/include/engine/audio/: audio_interface.hpp
engine/core/: README.md
engine/core/include/engine/core/: ISystem.hpp  engine_core.hpp  entity.hpp  registry.hpp  sparse_array.hpp  system.hpp  types.hpp
engine/core/src/: core_init.cpp
engine/game/: README.md
engine/game/include/engine/game/: game_api.hpp  game_settings.hpp  leaderboard.hpp  score_entry.hpp
engine/game/include/engine/game/components/: gamestate.hpp  network_id.hpp  player_control.hpp  score_value.hpp  shoot_pattern.hpp  ui_button.hpp  ui_transform.hpp
engine/game/include/engine/game/components/core/: position.hpp  sprite.hpp  velocity.hpp
engine/game/include/engine/game/components/gameplay/: ai_behavior.hpp  boss_phase.hpp  collider.hpp  enemy_type.hpp  entered_screen.hpp  faction.hpp  game_stats.hpp  health.hpp  input_state.hpp  kill_on_exit_screen.hpp  killer.hpp  lives.hpp  movement_pattern.hpp  projectile.hpp  score_value.hpp  shoot_cooldown.hpp  spectator.hpp  ultimate_charge.hpp  ultimate_projectile.hpp
engine/game/include/engine/game/components/network/: network_owned.hpp  owner.hpp
engine/game/include/engine/game/components/ui/: accessibility_config.hpp  scene.hpp  ui_action.hpp  ui_button.hpp  ui_dropdown.hpp  ui_setting_key.hpp  ui_slider.hpp  ui_tab.hpp  ui_text.hpp  ui_text_input.hpp  ui_transform.hpp
engine/game/include/engine/game/components/visual/: animation.hpp  particle_effect.hpp  sprite_id.hpp
engine/game/include/engine/game/systems/gameplay/: asteroid_spawn_system.hpp  boss_behavior_system.hpp  boss_spawn_system.hpp  collision_system.hpp  enemy_shooting_system.hpp  enemy_spawn_system.hpp  game_over_system.hpp  health_system.hpp  ice_enemy_spawn_system.hpp  lava_drop_spawn_system.hpp  level_manager.hpp  movement_pattern_system.hpp  projectile_system.hpp  score_system.hpp  shooting_system.hpp  ultimate_activation_system.hpp  ultimate_charge_system.hpp
engine/game/include/engine/game/systems/network/: network_send_system.hpp
engine/game/include/engine/game/systems/world/: cleanup_system.hpp  movement_system.hpp
engine/game/src/: game_init.cpp  leaderboard.cpp
engine/game/src/gameplay/: asteroid_spawn_system.cpp  boss_behavior_system.cpp  boss_spawn_system.cpp  collision_system.cpp  enemy_shooting_system.cpp  enemy_spawn_system.cpp  game_over_system.cpp  health_system.cpp  ice_enemy_spawn_system.cpp  lava_drop_spawn_system.cpp  level_manager.cpp  movement_pattern_system.cpp  projectile_system.cpp  score_system.cpp  shooting_system.cpp  ultimate_activation_system.cpp  ultimate_charge_system.cpp
engine/game/src/network/: network_send_system.cpp
engine/game/src/world/: cleanup_system.cpp  movement_system.cpp
engine/net/: README.md
engine/net/include/engine/net/: network_client_interface.hpp  networking.hpp  packet.hpp  serializer.hpp  thread_safe_queue.hpp  udp_socket.hpp
engine/net/src/: net_init.cpp  serializer.cpp  thread_safe_queue.cpp  udp_socket.cpp
engine/render/: README.md
engine/render/include/engine/render/: render_helpers.hpp  renderer_interface.hpp  rendering.hpp  sprite_bank.hpp  texture_loader.hpp
engine/render/src/: render_init.cpp  sprite_bank.cpp  texture_loader.cpp
scripts/: README.md  setup_vcpkg.sh  verify-ci-local.ps1  verify-ci-local.sh
server/: README.md
server/app/: main.cpp  network_server.cpp  network_server.hpp
server/systems/: apply_input_system.cpp  apply_input_system.hpp  server_game_loop_system.cpp  server_game_loop_system.hpp  snapshot_build_system.cpp  snapshot_build_system.hpp
testing/: README.md  ecs_registry_tests.cpp  movement_system_tests.cpp  shoot_cooldown_tests.cpp  snapshot_apply_tests.cpp
